# imac-cpp-workshop

./: CMakeLists.txt  README.md  TEST.md
images/resultat/: TEST.md
src/RGB_split/: main.cpp
src/bayer/: main.cpp
src/black_white/: main.cpp
src/blur/: main.cpp
src/cercle/: main.cpp
src/difference_gaussiennes/: main.cpp
src/disque/: main.cpp
src/exo02/: main.cpp
src/exo03/: main.cpp
src/exo04/: main.cpp
src/exo05/: main.cpp
src/exo06/: main.cpp
src/exo07/: main.cpp
src/exo08/: main.cpp
src/exo09/: main.cpp
src/exo10/: main.cpp
src/exo12/: main.cpp
src/exo13/: main.cpp
src/exo14/: main.cpp
src/exo15/: main.cpp
src/exo17/: main.cpp
src/fractale/: main.cpp
src/glitch/: main.cpp
src/gradient/: main.cpp
src/green/: main.cpp
src/kuwahara/: main.cpp
src/mirror/: main.cpp
src/mosaique/: main.cpp
src/mosaique_miroir/: main.cpp
src/negative/: main.cpp
src/noise/: main.cpp
src/normalisation/: main.cpp
src/pixel_sorting/: main.cpp
src/rosace/: main.cpp
src/rotate_90/: main.cpp
src/switch_color/: main.cpp
src/vortex/: main.cpp
